--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "webpack-dev-server",
+    "lint": "node_modules/eslint/bin/eslint.js src/** src/**/** --fix; exit 0"
   },
   "author": "",
   "license": "ISC",
@@ -18,6 +20,12 @@
     "babel-loader": "^7.0.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "webpack": "^3.4.0"
+    "eslint": "^4.13.1",
+    "eslint-loader": "^3.0.2",
+    "eslint-plugin-react": "^7.10.0",
+    "html-webpack-plugin": "^2.29.0",
+    "react-hot-loader": "^3.0.0-beta.7",
+    "webpack": "^3.4.0",
+    "webpack-dev-server": "^2.5.0"
   }
 }
