--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,11 +28,11 @@
         "react/jsx-pascal-case": 2,
         "react/prop-types": 2,
         "react/jsx-indent": [
-            "error",
+            "warn",
             2
         ],
         "indent": [
-            "error",
+            "warn",
             2
         ],
         "linebreak-style": [
